# dse-quark

./: .gitignore  CMakeLists.txt  PlotData.py  README.md  main.cpp  plotDataComplexPlane.py
include/: Definitions.hpp
include/dse/: DSE.hpp
include/grid/: ComplexMomentumGrid.hpp  MomentumGrid.hpp
include/helpers/: InterpAcceleratorsStruct.hpp
include/numerics/integration/: GaussChebyshev.hpp  GaussLegendre.hpp
include/numerics/polynomials/: LegendrePolynomials.hpp
include/numerics/roots/: NewtonRootFinder.hpp
include/qcd/: QuarkPropagator.hpp  QuarkSelfEnergy.hpp
output/: A_p2_m_0.004.txt  A_p2_m_0.1.txt  A_p2_m_1.3.txt  A_p2_m_4.5.txt  M_p2_m_0.004.txt  M_p2_m_0.1.txt  M_p2_m_1.3.txt  M_p2_m_4.5.txt
output_complex/: A_p2_m_0.004.txt  M_p2_m_0.004.txt
output_complex/positive_only/: A_p2_m_0.004.txt  M_p2_m_0.004.txt
src/dse/: DSE.cpp
src/grid/: ComplexMomentumGrid.cpp  MomentumGrid.cpp
src/numerics/integration/: GaussChebyshev.cpp  GaussLegendre.cpp
src/numerics/polynomials/: LegendrePolynomials.cpp
src/numerics/roots/: NewtonRootFinder.cpp
src/qcd/: QuarkPropagator.cpp  QuarkSelfEnergy.cpp
